--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^5.10.16",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-payment-inputs": "^1.1.9",
     "react-redux": "^8.0.5",
